// SystemMonitor.Shared/Protos/system_metrics.proto
syntax = "proto3";

option csharp_namespace = "SystemMonitor.Shared.Grpc";

package systemmonitor;

service SystemMetricsService {
  rpc GetCurrentMetrics (Empty) returns (MetricsReply);
  rpc GetMetricsStream (Empty) returns (stream MetricsReply);
  rpc GetHistoricalMetrics (HistoricalRequest) returns (HistoricalReply);
}

message Empty {}

message MetricsReply {
  int32 id = 1;
  int64 timestamp = 2;
  double cpu_usage = 3;
  double memory_usage = 4;
  double disk_usage = 5;
  string machine_name = 6;
}

message HistoricalRequest {
  int64 from_timestamp = 1;
  int64 to_timestamp = 2;
  int32 limit = 3;
}

message HistoricalReply {
  repeated MetricsReply metrics = 1;
}